# BriberBrother

./: .gitignore  README.md  hardhat.config.js  package-lock.json
contracts/: BriberBrothers.sol  BriberFunctions.sol
docs/: use-case-test.md
helper_scripts/: block_header.py  merkle_proof.py  merkle_proof_verifier.py  parse_raw_tx.py
ignition/modules/: BasicDeploymentsModule.js
miner/: Cargo.toml  Makefile  main.rs  miner.rs  multi_threading.rs  submitter.rs
script/: testScript.js
test/: BriberFunctions.js
