[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.2"
bitcoincore-rpc = "0.19.0"
hex = "0.4.3"
sha2 = "0.10.8"
tokio = {version = "1.40.0", features = ["full"] }
num_cpus = "1.16.0"
chrono = "0.4"
serde_json = "1.0.134"

[[bin]]
name = "miner"
path = "main.rs" 


